--- a/particle.html
+++ b/particle.html
@@ -206,7 +206,7 @@
         //初始化一个粒子轮播特效
         const particale = new Particale({
             warp: document.getElementById('particale-canvas'),
-            imgsUrl: ["imgs/1.jpg", "imgs/2.jpg", "imgs/3.jpg", "imgs/4.jpg", "imgs/5.jpg", "imgs/6.jpg", "imgs/7.jpg"],
+            imgsUrl: ['./images/1.jpg', './images/2.jpg'],
             radius: 1,
         });
     </script>
