--- a/particle.html
+++ b/particle.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>粒子轮播</title>
+    <title>庆祝一周年</title>
     <style>
         html,
         body {
@@ -206,7 +206,7 @@
         //初始化一个粒子轮播特效
         const particale = new Particale({
             warp: document.getElementById('particale-canvas'),
-            imgsUrl: ['./images/1.jpg', './images/2.jpg'],
+            imgsUrl: ['./images/1.jpg', './images/2.jpg', './images/3.jpg'],
             radius: 1,
         });
     </script>
